--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<p>"What is the capital of India?"</p>
+	New Delhi<input type="radio" id="New Delhi" required>
+	Mumbai<input type="radio" id="Mumbai" required>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
