--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<div class="blockquote">
 	<p>"What is the capital of India?"</p>
 	New Delhi<input type="radio" id="New Delhi" required>
 	Mumbai<input type="radio" id="Mumbai" required>
