--- a/main.html
+++ b/main.html
@@ -11,7 +11,9 @@
 	<p>"What is the capital of India?"</p>
 	New Delhi<input type="radio" id="New Delhi" required>
 	Mumbai<input type="radio" id="Mumbai" required>
-https://en.wikipedia.org/wiki/New_Delhi
+		<blockquote class="quotation">
+			"New Delhi is the capital of India and an administrative district of NCT Delhi." <a href="https://en.wikipedia.org/wiki/New_Delhi"></a>
+		</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
