--- a/main.html
+++ b/main.html
@@ -12,7 +12,8 @@
 	New Delhi<input type="radio" id="New Delhi" required>
 	Mumbai<input type="radio" id="Mumbai" required>
 		<blockquote class="quotation">
-			"New Delhi is the capital of India and an administrative district of NCT Delhi." <a href="https://en.wikipedia.org/wiki/New_Delhi"></a>
+			"New Delhi is the capital of India and an administrative district of NCT Delhi." 
+			<a href="https://en.wikipedia.org/wiki/New_Delhi">Delhi</a>
 		</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
