--- a/main.html
+++ b/main.html
@@ -8,12 +8,15 @@
 
 <body>
 	<div class="blockquote">
-	<p>"What is the capital of India?"</p>
+	<p><strong>"What is the capital of India?"</strong></p>
+		<label>
 	New Delhi<input type="radio" id="New Delhi" required>
 	Mumbai<input type="radio" id="Mumbai" required>
-		<blockquote class="quotation">
-			"New Delhi is the capital of India and an administrative district of NCT Delhi." 
+		</label>
+		<blockquote >
+		<p>"New Delhi is the capital of India and an administrative district of NCT Delhi." </p>
 			<a href="https://en.wikipedia.org/wiki/New_Delhi">Delhi</a>
+		<footer>#Wikipedia</footer>
 		</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
