--- a/main.html
+++ b/main.html
@@ -15,8 +15,8 @@
 		</label>
 		<blockquote >
 		<p>"New Delhi is the capital of India and an administrative district of NCT Delhi." </p>
-			<a href="https://en.wikipedia.org/wiki/New_Delhi">Delhi</a>
-		<footer>#Wikipedia</footer>
+			<a href="https://en.wikipedia.org/wiki/New_Delhi">#Wikipedia</a>
+		<footer>Wikipedia</footer>
 		</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
