--- a/main.html
+++ b/main.html
@@ -13,9 +13,10 @@
 	New Delhi<input type="radio" id="New Delhi" required>
 	Mumbai<input type="radio" id="Mumbai" required>
 		</label>
-		<blockquote >
-		<p>"New Delhi is the capital of India and an administrative district of NCT Delhi." </p>
-			<a href="https://en.wikipedia.org/wiki/New_Delhi">#Wikipedia</a>
+		<blockquote 
+		Cite="https://en.wikipedia.org/wiki/New_Delhi"
+			"New Delhi is the capital of India and an administrative district of NCT Delhi." </p>
+			#Wikipedia</a>
 		<footer>Wikipedia</footer>
 		</blockquote>
 	<!-- the entire body must be written by student -->
