--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	Mumbai<input type="radio" id="Mumbai" required>
 		</label>
 		<blockquote 
-		Cite="https://en.wikipedia.org/wiki/New_Delhi"
+		Cite="https://en.wikipedia.org/wiki/New_Delhi">
 			"New Delhi is the capital of India and an administrative district of NCT Delhi." </p>
 			#Wikipedia</a>
 		<footer>Wikipedia</footer>
